--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "io.vprana.agnihotra",
   "appName": "Agnihotra Timer",
   "bundledWebRuntime": false,
   "npmClient": "npm",
