--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Agni",
-  "version": "0.0.1",
+  "name": "Agnihotra",
+  "version": "0.0.2",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -65,5 +65,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.0.2"
   },
-  "description": "An Ionic project"
+  "description": "Agnihotra Timer project"
 }
