--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/device": "^5.39.1",
     "@capacitor/android": "^3.4.1",
     "@capacitor/core": "3.4.1",
     "@ionic-native/core": "^5.36.0",
@@ -28,6 +29,7 @@
     "@ionic/angular": "^6.0.7",
     "@types/firebase": "^3.2.1",
     "angularfire2": "^5.4.2",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "firebase": "^9.6.6",
